Upload file to the fullstack web development repo

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JavaScript</title>
   </head>
 
   <body>
-    <h1>Section 13 - Advanced JavaScript</h1>
+    <h1>Section 13: Advance JavaScript</h1>
+    <h2>143. Advanced Functions</h2>
+    <h2>145. Advanced Arrays</h2>
 
 
-    <script src="exercise2.js"></script>
+    <script src="advancedArray145.js"></script>
   </body>
 
 </html>
