Updating the index.html

--- a/index.html
+++ b/index.html
@@ -8,12 +8,28 @@
   </head>
 
   <body>
-    <h1>Section 13: Advance JavaScript</h1>
+    <h1>JavaScript</h1>
+    <h2>Subject Learned</h2>
+    <ul>
+      <li>Intro to JavaScript</li>
+      <li>Data Type: Number, String, Bloolen, and Comparisons</li>
+
+    </ul>
+    <h2>Exercises: Number, String, Boolean, Comparisons</h2>
+    <ul>
+      <li><a href="calculator.js">Calculator 1</a></li>
+      <li><a href="keylessCar.js">Make a keyless car</a></li>
+    </ul>
+
+
+
+    <!-- <h1>Section 13: Advance JavaScript</h1>
     <h2>143. Advanced Functions</h2>
-    <h2>145. Advanced Arrays</h2>
+    <h2>145. Advanced Arrays</h2> -->
 
 
-    <script src="advancedArray145.js"></script>
+    <!-- <script src="calculator.js"></script> -->
+    <!-- <script src="keylessCar.js"></script> -->
   </body>
 
 </html>
