Updating the index.html and Readme.md

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <ul>
       <li>Intro to JavaScript</li>
       <li>Data Type: Number, String, Bloolen, and Comparisons</li>
-
+      <li>Variable</li>
+      <li>Control Flow</li>
+      <li>Functions</li>
+      <li>Data Structures: Array</li>
     </ul>
     <h2>Exercises: Number, String, Boolean, Comparisons</h2>
     <ul>
