Add link to index.html to file advancedControlFlowEx2.js

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       <li>Functions</li>
       <li>Data Structures: Array</li>
     </ul>
+    <h3>Exercises</h3>
+    <ul>
+      <li><a href="advancedControlFlowEx2.js">Advanced Control Flow</a></li>
+    </ul>
     <h2>Exercises: Number, String, Boolean, Comparisons</h2>
     <ul>
       <li><a href="calculator.js">Calculator 1</a></li>
