Updating index.html content

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <li>Control Flow</li>
       <li>Functions</li>
       <li>Data Structures: Array</li>
+      <li>Data Structures: Objects</li>
+      <li>Loops</li>
+      <li>Javascript Keywords</li>
     </ul>
     <h3>Exercises</h3>
     <ul>
