Updating index.html content

--- a/index.html
+++ b/index.html
@@ -21,17 +21,27 @@
       <li>Loops</li>
       <li>Javascript Keywords</li>
     </ul>
-    <h3>Exercises</h3>
-    <ul>
-      <li><a href="advancedControlFlowEx2.js">Advanced Control Flow</a></li>
-    </ul>
-    <h2>Exercises: Number, String, Boolean, Comparisons</h2>
+    <h3>Exercises: Number, String, Boolean, Comparisons</h3>
     <ul>
       <li><a href="calculator.js">Calculator 1</a></li>
       <li><a href="keylessCar.js">Make a keyless car</a></li>
     </ul>
+    <h3>Exercises</h3>
+    <ul>
 
+    </ul>
 
+    <h2>Advanced JavaScript</h2>
+    <h3>Scope</h3>
+    <strong>Exercises:</strong>
+    <uL>
+      <li><a href="scope01.js">Scope exercise 1</a></li>
+    </uL>
+    <h3>Advanced Control Flow</h3>
+    <strong>Exercises</strong>
+    <ul>
+      <li><a href="advancedControlFlowEx2.js">Advanced Control Flow</a></li>
+    </ul>
 
     <!-- <h1>Section 13: Advance JavaScript</h1>
     <h2>143. Advanced Functions</h2>
