Updating index.html content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <h1>JavaScript</h1>
-    <h2>Subject Learned</h2>
+    <h2>Fundamental Learned</h2>
     <ul>
       <li>Intro to JavaScript</li>
       <li>Data Type: Number, String, Bloolen, and Comparisons</li>
@@ -41,6 +41,14 @@
     <strong>Exercises</strong>
     <ul>
       <li><a href="advancedControlFlowEx2.js">Advanced Control Flow</a></li>
+    </ul>
+
+    <h2>ES5 and ES6</h2>
+    <h3>let & cont</h3>
+    <strong>Exercises:</strong>
+    <ul>
+      <li><a href="es5es6_001.js">How to use let, const, and let, const in
+          objects</a></li>
     </ul>
 
     <!-- <h1>Section 13: Advance JavaScript</h1>
