Updating index.html content

--- a/index.html
+++ b/index.html
@@ -35,20 +35,21 @@
     <h3>Scope</h3>
     <strong>Exercises:</strong>
     <uL>
-      <li><a href="scope01.js">Scope exercise 1</a></li>
+      <li><a href="scripts/scope01.js">Scope exercise 1</a></li>
     </uL>
     <h3>Advanced Control Flow</h3>
     <strong>Exercises</strong>
     <ul>
-      <li><a href="advancedControlFlowEx2.js">Advanced Control Flow</a></li>
+      <li><a href="scripts/advancedControlFlowEx2.js">Advanced Control Flow</a>
+      </li>
     </ul>
 
     <h2>ES5 and ES6</h2>
-    <h3>let & cont</h3>
+    <h3>let & const</h3>
     <strong>Exercises:</strong>
     <ul>
-      <li><a href="es5es6_001.js">How to use let, const, and let, const in
-          objects</a></li>
+      <li><a href="scripts/es5es6_001.js">code example using let and const</a>
+      </li>
     </ul>
 
     <!-- <h1>Section 13: Advance JavaScript</h1>
@@ -56,8 +57,10 @@
     <h2>145. Advanced Arrays</h2> -->
 
 
-    <!-- <script src="calculator.js"></script> -->
-    <!-- <script src="keylessCar.js"></script> -->
+    <!-- <script src="scripts/calculator.js"></script> -->
+    <!-- <script src="scripts/keylessCar.js"></script> -->
+
+    <script src="scripts/es5es6_001.js"></script>
   </body>
 
 </html>
