updating index.html, readme.md...

--- a/index.html
+++ b/index.html
@@ -50,7 +50,33 @@
     <ul>
       <li><a href="scripts/es5es6_001.js">code example using let and const</a>
       </li>
+      <li><a href="scripts/es5es6Exercise3.js">Convert old code to ES5 & ES6</a>
+      </li>
     </ul>
+
+    <h3>Advanced Functions</h3>
+    <strong>Exercises:</strong>
+    <ul>
+      <li><a href="scripts/143advanceFunctions.js">Advanced Functions
+          Example</a>
+      </li>
+      <li><a href="scripts/es5es6Exercise4.js">Advanced Functions Exercies</a>
+      </li>
+    </ul>
+
+    <h3>Advance Arrays</h3>
+    <strong>Exercises:</strong>
+    <ul>
+      <li><a href="scripts/advancedArray145.js">Advanced Arrays Example</a></li>
+      <li><a href="scripts/advancedArrayEx5.js">Advanced Arrays Exercise 5</a>
+      </li>
+    </ul>
+
+    <h3>Advanced Object</h3>
+    <strong>Example code</strong>
+
+    <strong>Exercises:</strong>
+
 
     <!-- <h1>Section 13: Advance JavaScript</h1>
     <h2>143. Advanced Functions</h2>
