--- a/es5es6index.html
+++ b/es5es6index.html
@@ -10,9 +10,8 @@
   <body>
     <h1>JavaScrip ES5 and ES6</h1>
 
-
-
-    <script src="scripts/es5es6_001.js"></script>
+    <script src="scripts/advancedArrayEx5.js"></script>
+    <!-- <script src="scripts/es5es6_001.js"></script> -->
   </body>
 
 </html>
