Add more code example and exercises to the project and change some files name

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <h3>let & const</h3>
     <strong>Exercises:</strong>
     <ul>
-      <li><a href="scripts/es5es6_001.js">code example using let and const</a>
+      <li><a href="scripts/es5es6Ex01.js">code example using let and const</a>
       </li>
-      <li><a href="scripts/es5es6Exercise3.js">Convert old code to ES5 & ES6</a>
+      <li><a href="scripts/es5es6Ex03.js">Convert old code to ES5 & ES6</a>
       </li>
     </ul>
 
@@ -60,7 +60,7 @@
       <li><a href="scripts/143advanceFunctions.js">Advanced Functions
           Example</a>
       </li>
-      <li><a href="scripts/es5es6Exercise4.js">Advanced Functions Exercies</a>
+      <li><a href="scripts/es5es6Ex04.js">Advanced Functions Exercies</a>
       </li>
     </ul>
 
@@ -74,8 +74,13 @@
 
     <h3>Advanced Object</h3>
     <strong>Example code</strong>
-
+    <ul>
+      <li><a href="scripts/es5es6Exa06.js">Advanced Object Example</a></li>
+    </ul>
     <strong>Exercises:</strong>
+    <ul>
+      <li><a href="scripts/es5es6Ex06.js">Advanced Object</a></li>
+    </ul>
 
 
     <!-- <h1>Section 13: Advance JavaScript</h1>
@@ -86,7 +91,7 @@
     <!-- <script src="scripts/calculator.js"></script> -->
     <!-- <script src="scripts/keylessCar.js"></script> -->
 
-    <script src="scripts/es5es6_001.js"></script>
+    <script src="scripts/es5es6Ex06.js"></script>
   </body>
 
 </html>
