Add more example code and exercises

--- a/index.html
+++ b/index.html
@@ -82,16 +82,25 @@
       <li><a href="scripts/es5es6Ex06.js">Advanced Object</a></li>
     </ul>
 
+    <h3>ES7</h3>
+    <strong>Example Code</strong>
+    <ul>
+      <li><a href="scripts/es7Ex01.js">Es7 string.includes</a></li>
+    </ul>
 
-    <!-- <h1>Section 13: Advance JavaScript</h1>
-    <h2>143. Advanced Functions</h2>
-    <h2>145. Advanced Arrays</h2> -->
+    <h3>ES8</h3>
+    <strong>Example Code</strong>
+    <ul>
+      <li><a href="scripts/es8Exam01.js">ES8 Example Code</a></li>
+      <li><a href=""></a></li>
+    </ul>
+    <strong>Exercies:</strong>
+    <ul>
+      <li><a href="scripts/es8Exer01.js">Es8 Exercies 01</a></li>
+    </ul>
 
 
-    <!-- <script src="scripts/calculator.js"></script> -->
-    <!-- <script src="scripts/keylessCar.js"></script> -->
-
-    <script src="scripts/es5es6Ex06.js"></script>
+    <!-- <script src="scripts/es5es6Ex06.js"></script> -->
   </body>
 
 </html>
