Add more example code and exercises to the project

--- a/index.html
+++ b/index.html
@@ -99,6 +99,30 @@
       <li><a href="scripts/es8Exer01.js">Es8 Exercies 01</a></li>
     </ul>
 
+    <h3>ES8 & ES9 Async</h3>
+
+    <h3>ES10 (2019)</h3>
+    <p>Feature: flat()</p>
+    <strong>Code Example</strong>
+    <ul>
+      <li><a href="scripts/es10Exam01.js">ES10 Example</a></li>
+    </ul>
+    <strong>ES10 Exercises</strong>
+    <ul>
+      <li><a href="scripts/es10Exer01.js">ES10 Exercies 01</a></li>
+    </ul>
+
+    <h3>Advanced Loop</h3>
+    <strong>Code Example</strong>
+    <ul>
+      <li><a href="scripts/advancedLoop01.js">Advanced Loop Examples</a></li>
+    </ul>
+    <strong>Exercises:</strong>
+    <ul>
+      <li><a href="scripts/advancedLoopExer01.js">Advanced Loop Exercies 01</a>
+      </li>
+    </ul>
+
 
     <!-- <script src="scripts/es5es6Ex06.js"></script> -->
   </body>
