--- a/es5es6index.html
+++ b/es5es6index.html
@@ -11,8 +11,8 @@
     <h1>JavaScrip ES5 and ES6</h1>
 
 
-    <script src="scripts/es8Exer01.js"></script>
-    <!-- <script src="scripts/advancedArrayEx5.js"></script> -->
+    <script src="scripts/advancedLoopExer01.js"></script>
+    <!-- <script src="scripts/es10Exer01.js"></script> -->
     <!-- <script src="scripts/es5es6_001.js"></script> -->
   </body>
 
