--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
 
   <body>
-    <h1>JavaScript</h1>
-    <h2>Fundamental Learned</h2>
+    <h1>JavaScript Training</h1>
+    <h2>Fundamental</h2>
     <ul>
       <li>Intro to JavaScript</li>
       <li>Data Type: Number, String, Bloolen, and Comparisons</li>
@@ -23,24 +23,25 @@
     </ul>
     <h3>Exercises: Number, String, Boolean, Comparisons</h3>
     <ul>
-      <li><a href="calculator.js">Calculator 1</a></li>
-      <li><a href="keylessCar.js">Make a keyless car</a></li>
+      <li><a href="calculator.js" target="_blank">Calculator 1</a></li>
+      <li><a href="keylessCar.js" target="_blank">Make a keyless car</a></li>
     </ul>
     <h3>Exercises</h3>
     <ul>
-
+      <li><a href="testIndex.html" target="_blank">Test Web Page</a></li>
     </ul>
 
-    <h2>Advanced JavaScript</h2>
+    <h2>Advanced Features</h2>
     <h3>Scope</h3>
     <strong>Exercises:</strong>
     <uL>
-      <li><a href="scripts/scope01.js">Scope exercise 1</a></li>
+      <li><a href="scripts/scope01.js" target="_blank">Scope exercise 1</a></li>
     </uL>
     <h3>Advanced Control Flow</h3>
     <strong>Exercises</strong>
     <ul>
-      <li><a href="scripts/advancedControlFlowEx2.js">Advanced Control Flow</a>
+      <li><a href="scripts/advancedControlFlowEx2.js" target="_blank">Advanced
+          Control Flow</a>
       </li>
     </ul>
 
@@ -48,55 +49,77 @@
     <h3>let & const</h3>
     <strong>Exercises:</strong>
     <ul>
-      <li><a href="scripts/es5es6Ex01.js">code example using let and const</a>
+      <li><a href="scripts/es5es6Ex01.js" target="_blank">code example using let
+          and const</a>
       </li>
-      <li><a href="scripts/es5es6Ex03.js">Convert old code to ES5 & ES6</a>
+      <li><a href="scripts/es5es6Ex03.js" target="_blank">Convert old code to
+          ES5 & ES6</a>
       </li>
     </ul>
 
-    <h3>Advanced Functions</h3>
+    <h3>Advanced Objects & Functions</h3>
+    <strong>Example Code</strong>
+    <ul>
+      <li><a href="functionConstructor01.html" target="_blank">Function
+          Constructor Example 01</a></li>
+      <li><a href="objectCreate01.html" target="_blank">Object.create()
+          Example 01</a></li>
+      <li><a href="primitiveObjects01.html" target="_blank">Primities &
+          Objects Example 01</a></li>
+      <li><a href="firstClassFunction01.html" target="_blank">First Class
+          Function Example 01</a></li>
+    </ul>
+
     <strong>Exercises:</strong>
     <ul>
-      <li><a href="scripts/143advanceFunctions.js">Advanced Functions
+      <li><a href="scripts/143advanceFunctions.js" target="_blank">Advanced
+          Functions
           Example</a>
       </li>
-      <li><a href="scripts/es5es6Ex04.js">Advanced Functions Exercies</a>
+      <li><a href="scripts/es5es6Ex04.js" target="_blank">Advanced Functions
+          Exercies</a>
       </li>
     </ul>
 
     <h3>Advance Arrays</h3>
     <strong>Exercises:</strong>
     <ul>
-      <li><a href="scripts/advancedArray145.js">Advanced Arrays Example</a></li>
-      <li><a href="scripts/advancedArrayEx5.js">Advanced Arrays Exercise 5</a>
+      <li><a href="scripts/advancedArray145.js" target="_blank">Advanced Arrays
+          Example</a></li>
+      <li><a href="scripts/advancedArrayEx5.js" target="_blank">Advanced Arrays
+          Exercise 5</a>
       </li>
     </ul>
 
-    <h3>Advanced Object</h3>
     <strong>Example code</strong>
     <ul>
-      <li><a href="scripts/es5es6Exa06.js">Advanced Object Example</a></li>
+      <li><a href="scripts/es5es6Exa06.js" target="_blank">Advanced Object
+          Example</a></li>
     </ul>
     <strong>Exercises:</strong>
     <ul>
-      <li><a href="scripts/es5es6Ex06.js">Advanced Object</a></li>
+      <li><a href="scripts/es5es6Ex06.js" target="_blank">Advanced Object</a>
+      </li>
     </ul>
 
     <h3>ES7</h3>
     <strong>Example Code</strong>
     <ul>
-      <li><a href="scripts/es7Ex01.js">Es7 string.includes</a></li>
+      <li><a href="scripts/es7Ex01.js" target="_blank">Es7 string.includes</a>
+      </li>
     </ul>
 
     <h3>ES8</h3>
     <strong>Example Code</strong>
     <ul>
-      <li><a href="scripts/es8Exam01.js">ES8 Example Code</a></li>
+      <li><a href="scripts/es8Exam01.js" target="_blank">ES8 Example Code</a>
+      </li>
       <li><a href=""></a></li>
     </ul>
     <strong>Exercies:</strong>
     <ul>
-      <li><a href="scripts/es8Exer01.js">Es8 Exercies 01</a></li>
+      <li><a href="scripts/es8Exer01.js" target="_blank">Es8 Exercies 01</a>
+      </li>
     </ul>
 
     <h3>ES8 & ES9 Async</h3>
@@ -105,24 +128,29 @@
     <p>Feature: flat()</p>
     <strong>Code Example</strong>
     <ul>
-      <li><a href="scripts/es10Exam01.js">ES10 Example</a></li>
+      <li><a href="scripts/es10Exam01.js" target="_blank">ES10 Example</a></li>
     </ul>
     <strong>ES10 Exercises</strong>
     <ul>
-      <li><a href="scripts/es10Exer01.js">ES10 Exercies 01</a></li>
+      <li><a href="scripts/es10Exer01.js" target="_blank">ES10 Exercies 01</a>
+      </li>
     </ul>
 
     <h3>Advanced Loop</h3>
     <strong>Code Example</strong>
     <ul>
-      <li><a href="scripts/advancedLoop01.js">Advanced Loop Examples</a></li>
+      <li><a href="scripts/advancedLoop01.js" target="_blank">Advanced Loop
+          Examples</a></li>
     </ul>
     <strong>Exercises:</strong>
     <ul>
-      <li><a href="scripts/advancedLoopExer01.js">Advanced Loop Exercies 01</a>
+      <li><a href="scripts/advancedLoopExer01.js" target="_blank">Advanced Loop
+          Exercies 01</a>
       </li>
     </ul>
 
+    <h3>React.js + Redux</h3>
+    <strong>Code Example</strong>
 
     <!-- <script src="scripts/es5es6Ex06.js"></script> -->
   </body>
