Add code example to learning page index.html and javaScript example code

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
           Objects Example 01</a></li>
       <li><a href="firstClassFunction01.html" target="_blank">First Class
           Function Example 01</a></li>
+      <li><a href="iifeExam01.html" target="_blank">Immediately Involked
+          Function Expressions (IIFE) Example 01</a></li>
     </ul>
 
     <strong>Exercises:</strong>
