re-organized .hmtl and .js files, updated index.html, add more code examples and exerces to repo

--- a/index.html
+++ b/index.html
@@ -60,16 +60,18 @@
     <h3>Advanced Objects & Functions</h3>
     <strong>Example Code</strong>
     <ul>
-      <li><a href="functionConstructor01.html" target="_blank">Function
+      <li><a href="pages/functionConstructor01.html" target="_blank">Function
           Constructor Example 01</a></li>
-      <li><a href="objectCreate01.html" target="_blank">Object.create()
+      <li><a href="pages/objectCreate01.html" target="_blank">Object.create()
           Example 01</a></li>
-      <li><a href="primitiveObjects01.html" target="_blank">Primities &
+      <li><a href="pages/primitiveObjects01.html" target="_blank">Primities &
           Objects Example 01</a></li>
-      <li><a href="firstClassFunction01.html" target="_blank">First Class
+      <li><a href="pages/firstClassFunction01.html" target="_blank">First Class
           Function Example 01</a></li>
-      <li><a href="iifeExam01.html" target="_blank">Immediately Involked
+      <li><a href="pages/iifeExam01.html" target="_blank">Immediately Involked
           Function Expressions (IIFE) Example 01</a></li>
+      <li><a href="pages/closures01.html" target="_blank">Closures Code Example
+          01</a></li>
     </ul>
 
     <strong>Exercises:</strong>
@@ -81,6 +83,10 @@
       <li><a href="scripts/es5es6Ex04.js" target="_blank">Advanced Functions
           Exercies</a>
       </li>
+      <li><a href="pages/closuresExer01.html" target="_blank">Closures Exercies
+          01</a>
+      </li>
+
     </ul>
 
     <h3>Advance Arrays</h3>
