--- a/pages/functionConstructor01.html
+++ b/pages/functionConstructor01.html
@@ -10,17 +10,17 @@
   <body>
     <h1>JavaScrip ES5 and ES6</h1>
 
-    <h2>Object.create Example</h2>
+    <h2>Function Constructor Example</h2>
 
     <p>Please open browser console to see script output data</p>
 
     <ul>
-      <li><a href="scripts/objectCreate01.js" target="_blank">Code
+      <li><a href="../scripts/functionContructor01.js" target="_blank">Code
           Example</a></li>
     </ul>
 
 
-    <script src="scripts/objectCreate01.js"></script>
+    <script src="../scripts/functionContructor01.js"></script>
     <!-- <script src="scripts/es10Exer01.js"></script> -->
     <!-- <script src="scripts/es5es6_001.js"></script> -->
   </body>
