--- a/pages/iifeExam01.html
+++ b/pages/iifeExam01.html
@@ -15,12 +15,12 @@
     <p>Please open browser console to see script output data</p>
 
     <ul>
-      <li><a href="scripts/iifeExam01.js" target="_blank">Code
+      <li><a href="../scripts/iifeExam01.js" target="_blank">Code
           Example</a></li>
     </ul>
 
 
-    <script src="scripts/iifeExam01.js"></script>
+    <script src="../scripts/iifeExam01.js"></script>
     <!-- <script src="scripts/es10Exer01.js"></script> -->
     <!-- <script src="scripts/es5es6_001.js"></script> -->
   </body>
