--- a/pages/closuresExer01.html
+++ b/pages/closuresExer01.html
@@ -8,19 +8,20 @@
   </head>
 
   <body>
-    <h1>JavaScrip ES5 and ES6</h1>
+    <h1>Advanced JavaScript</h1>
 
-    <h2>First Class Functions - Passing Functions as Arguments</h2>
+    <h2>Closures Exercise 01</h2>
 
     <p>Please open browser console to see script output data</p>
 
     <ul>
-      <li><a href="scripts/firstClassFuncion01.js" target="_blank">Code
-          Example</a></li>
+      <li><a href="../scripts/closuresExer01.js" target="_blank">Closures
+          Example
+          01</a></li>
     </ul>
 
 
-    <script src="scripts/firstClassFuncion01.js"></script>
+    <script src="../scripts/closuresExer01.js"></script>
     <!-- <script src="scripts/es10Exer01.js"></script> -->
     <!-- <script src="scripts/es5es6_001.js"></script> -->
   </body>
