--- a/pages/firstClassFunction01.html
+++ b/pages/firstClassFunction01.html
@@ -10,17 +10,17 @@
   <body>
     <h1>JavaScrip ES5 and ES6</h1>
 
-    <h2>Primitives and Objects </h2>
+    <h2>First Class Functions - Passing Functions as Arguments</h2>
 
     <p>Please open browser console to see script output data</p>
 
     <ul>
-      <li><a href="scripts/primitiveObjects01.js" target="_blank">Code
+      <li><a href="../scripts/firstClassFuncion01.js" target="_blank">Code
           Example</a></li>
     </ul>
 
 
-    <script src="scripts/primitiveObjects01.js"></script>
+    <script src="../scripts/firstClassFuncion01.js"></script>
     <!-- <script src="scripts/es10Exer01.js"></script> -->
     <!-- <script src="scripts/es5es6_001.js"></script> -->
   </body>
