Add more code examples to repo

--- a/index.html
+++ b/index.html
@@ -68,10 +68,16 @@
           Objects Example 01</a></li>
       <li><a href="pages/firstClassFunction01.html" target="_blank">First Class
           Function Example 01</a></li>
+      <li><a href="pages/firstClassFunction02.html" target="_blank">First Class
+          Function Example 02</a></li>
       <li><a href="pages/iifeExam01.html" target="_blank">Immediately Involked
           Function Expressions (IIFE) Example 01</a></li>
       <li><a href="pages/closures01.html" target="_blank">Closures Code Example
           01</a></li>
+      <li><a href="pages/bindCallApply.html" target="_blank">Bind, Call and
+          Apply Example 01</a></li>
+      <li><a href="pages/firstClassFunction02.html" target="_blank">Bind,
+          Call and Apply Example 02</a></li>
     </ul>
 
     <strong>Exercises:</strong>
