--- a/pages/objectCreate01.html
+++ b/pages/objectCreate01.html
@@ -9,11 +9,11 @@
   </head>
 
   <body>
-    <h1>JavaScrip ES5 and ES6</h1>
+    <h1>Advanced JavaScript</h1>
 
     <h2>Object.create Example</h2>
 
-    <p>Please open browser console to see script output data</p>
+    <p>Please open the chrome browser console to see the script output data</p>
 
     <ul>
       <li><a href="../scripts/objectCreate01.js" target="_blank">Code
