--- a/pages/bindCallApply.html
+++ b/pages/bindCallApply.html
@@ -11,17 +11,16 @@
   <body>
     <h1>Advanced JavaScript</h1>
 
-    <h2>Primitives and Objects </h2>
+    <h2>Bind, Call and Apply</h2>
 
     <p>Please open the chrome browser console to see the script output data</p>
 
     <ul>
-      <li><a href="../scripts/primitiveObjects01.js" target="_blank">Code
+      <li><a href="../scripts/bindCallApply.js" target="_blank">Code
           Example</a></li>
     </ul>
 
-
-    <script src="../scripts/primitiveObjects01.js"></script>
+    <script src="../scripts/bindCallApply.js"></script>
     <!-- <script src="scripts/es10Exer01.js"></script> -->
     <!-- <script src="scripts/es5es6_001.js"></script> -->
   </body>
