--- a/pages/closuresExer01.html
+++ b/pages/closuresExer01.html
@@ -12,7 +12,7 @@
 
     <h2>Closures Exercise 01</h2>
 
-    <p>Please open browser console to see script output data</p>
+    <p>Please open the chrome browser console to see the script output data</p>
 
     <ul>
       <li><a href="../scripts/closuresExer01.js" target="_blank">Closures
