--- a/pages/firstClassFunction01.html
+++ b/pages/firstClassFunction01.html
@@ -8,19 +8,19 @@
   </head>
 
   <body>
-    <h1>JavaScrip ES5 and ES6</h1>
+    <h1>Advanced JavaScrip</h1>
 
     <h2>First Class Functions - Passing Functions as Arguments</h2>
 
-    <p>Please open browser console to see script output data</p>
+    <p>Please open the chrome browser console to see the script output data</p>
 
     <ul>
-      <li><a href="../scripts/firstClassFuncion01.js" target="_blank">Code
+      <li><a href="../scripts/firstClassFunction01.js" target="_blank">Code
           Example</a></li>
     </ul>
 
 
-    <script src="../scripts/firstClassFuncion01.js"></script>
+    <script src="../scripts/firstClassFunction01.js"></script>
     <!-- <script src="scripts/es10Exer01.js"></script> -->
     <!-- <script src="scripts/es5es6_001.js"></script> -->
   </body>
