--- a/pages/firstClassFunction02.html
+++ b/pages/firstClassFunction02.html
@@ -1,4 +1,3 @@
-../
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,19 +8,19 @@
   </head>
 
   <body>
-    <h1>Advanced JavaScript</h1>
+    <h1>Advanced JavaScrip</h1>
 
-    <h2>Primitives and Objects </h2>
+    <h2>First Class Functions - Passing Functions as Arguments</h2>
 
     <p>Please open the chrome browser console to see the script output data</p>
 
     <ul>
-      <li><a href="../scripts/primitiveObjects01.js" target="_blank">Code
-          Example</a></li>
+      <li><a href="../scripts/firstClassFunction02.js" target="_blank">Code
+          Example 02</a></li>
     </ul>
 
 
-    <script src="../scripts/primitiveObjects01.js"></script>
+    <script src="../scripts/firstClassFunction02.js"></script>
     <!-- <script src="scripts/es10Exer01.js"></script> -->
     <!-- <script src="scripts/es5es6_001.js"></script> -->
   </body>
