--- a/pages/functionConstructor01.html
+++ b/pages/functionConstructor01.html
@@ -8,11 +8,11 @@
   </head>
 
   <body>
-    <h1>JavaScrip ES5 and ES6</h1>
+    <h1>Advanced JavaScrip</h1>
 
     <h2>Function Constructor Example</h2>
 
-    <p>Please open browser console to see script output data</p>
+    <p>Please open the chrome browser console to see the script output data</p>
 
     <ul>
       <li><a href="../scripts/functionContructor01.js" target="_blank">Code
