--- a/pages/iifeExam01.html
+++ b/pages/iifeExam01.html
@@ -8,11 +8,11 @@
   </head>
 
   <body>
-    <h1>JavaScrip ES5 and ES6</h1>
+    <h1>Advanced JavaScrip</h1>
 
     <h2>Immediately Involked Function Expressions (IIFE)</h2>
 
-    <p>Please open browser console to see script output data</p>
+    <p>Please open the chrome browser console to see the script output data</p>
 
     <ul>
       <li><a href="../scripts/iifeExam01.js" target="_blank">Code
