Add new code example and exercise to repo

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
       <li><a href="pages/closuresExer01.html" target="_blank">Closures Exercies
           01</a>
       </li>
+      <li><a href="pages/quizGame01.html" target="_blank">Quiz Game 01
+          Exercies</a>
+      </li>
 
     </ul>
 
