Add more javascript example code to repo

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
 
     <h2>ES5 and ES6</h2>
     <h3>let & const</h3>
+    <strong>Variable Declaration with let & const Code Examples</strong>
+    <ul>
+      <li><a href="pages/letConstExam01.html" target="_blank">Variable with let
+          & const</a>
+      <li><a href="pages/letConstExam02.html" target="_blank">let & const inside
+          function</a>
+      </li>
+    </ul>
     <strong>Exercises:</strong>
     <ul>
       <li><a href="scripts/es5es6Ex01.js" target="_blank">code example using let
@@ -55,6 +63,22 @@
       <li><a href="scripts/es5es6Ex03.js" target="_blank">Convert old code to
           ES5 & ES6</a>
       </li>
+    </ul>
+    <h3>Blocks and IIFEs</h3>
+    <strong>Code Example</strong>
+    <ul>
+      <li><a href="pages/iifeExam02.html" target="_blank">Code Block Exampe 01
+        </a></li>
+      <li><a href="pages/iifeExam01.html" target="_blank">Immediately Involked
+          Function Expressions (IIFE) Example 01</a></li>
+    </ul>
+    <h3>String Template Literals</h3>
+    <strong>String Template</strong>
+    <ul>
+      <li><a href="pages/stringTemplateExam01.html" target="_blank">String
+          Template Example 01</a></li>
+      <li><a href="pages/stringTemplateExam02.html" target="_blank">String
+          Template Example 02</a></li>
     </ul>
 
     <h3>Advanced Objects & Functions</h3>
@@ -70,8 +94,6 @@
           Function Example 01</a></li>
       <li><a href="pages/firstClassFunction02.html" target="_blank">First Class
           Function Example 02</a></li>
-      <li><a href="pages/iifeExam01.html" target="_blank">Immediately Involked
-          Function Expressions (IIFE) Example 01</a></li>
       <li><a href="pages/closures01.html" target="_blank">Closures Code Example
           01</a></li>
       <li><a href="pages/bindCallApply.html" target="_blank">Bind, Call and
@@ -95,7 +117,6 @@
       <li><a href="pages/quizGame01.html" target="_blank">Quiz Game 01
           Exercies</a>
       </li>
-
     </ul>
 
     <h3>Advance Arrays</h3>
