Add more code example and exercices to repo

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       <li>Loops</li>
       <li>Javascript Keywords</li>
     </ul>
+
+    <h3>Variables, Data Type, and Operators</h3>
+    <strong>Examples</strong>
+    <ul>
+      <li><a href="pages/jsVariableDataOperatorsFunctionsExer01.html"
+          target="_blank">Code Examples</a></li>
+    </ul>
     <h3>Exercises: Number, String, Boolean, Comparisons</h3>
     <ul>
       <li><a href="calculator.js" target="_blank">Calculator 1</a></li>
@@ -29,6 +36,18 @@
     <h3>Exercises</h3>
     <ul>
       <li><a href="testIndex.html" target="_blank">Test Web Page</a></li>
+    </ul>
+
+    <h3>Functions & Scope</h3>
+    <strong>Code Examples</strong>
+    <ul>
+      <li><a href="pages/functionScopeExam01.html" target="_blank">Functions &
+          scope Examples</a></li>
+    </ul>
+    <strong>Exercies</strong>
+    <ul>
+      <li><a href="basicCalculator/index.html" target="_blank">Calculator
+          Basic</a></li>
     </ul>
 
     <h2>Advanced Features</h2>
@@ -65,7 +84,7 @@
       </li>
     </ul>
     <h3>Blocks and IIFEs</h3>
-    <strong>Code Example</strong>
+    <strong>Code Examples</strong>
     <ul>
       <li><a href="pages/iifeExam02.html" target="_blank">Code Block Exampe 01
         </a></li>
@@ -73,13 +92,23 @@
           Function Expressions (IIFE) Example 01</a></li>
     </ul>
     <h3>String Template Literals</h3>
-    <strong>String Template</strong>
+    <strong>Code Examples</strong>
     <ul>
       <li><a href="pages/stringTemplateExam01.html" target="_blank">String
           Template Example 01</a></li>
       <li><a href="pages/stringTemplateExam02.html" target="_blank">String
           Template Example 02</a></li>
     </ul>
+
+    <h3>String Methods</h3>
+    <strong>String methods Examples</strong>
+    <ul>
+      <li><a href="pages/stringMethodsExam01.html"
+          target="-blank">str.startsWith('str'); str.endsWith('tr');
+          str.includes('str'); str.repeat(n)</a>
+      </li>
+    </ul>
+
 
     <h3>Advanced Objects & Functions</h3>
     <strong>Example Code</strong>
