Add more code example to repo

--- a/basicCalculator/indexArray.html
+++ b/basicCalculator/indexArray.html
@@ -11,7 +11,7 @@
       rel="stylesheet" />
     <link rel="stylesheet" href="assets/styles/app.css" />
     <script src="assets/scripts/vendor.js" defer></script>
-    <script src="assets/scripts/app.js" defer></script>
+    <script src="assets/scripts/appArray.js" defer></script>
   </head>
 
   <body>
@@ -30,8 +30,14 @@
     </section>
     <section id="results">
       <h2 id="current-calculation">0</h2>
-      <h2>Result: <span id="current-result">0</span></h2>
-      <p><a href="assets/scripts/app.js" target="_blank">Code Example</a></p>
+      <h2>Current Result: <span id="current-result">0</span></h2>
+    </section>
+    <section id="logging">
+      <h3>Previous Result: <span id="pre-result">0</span></h3>
+      <h3>User Input: <span id="user-input">0</span> </h3>
+      <p>Open chrome console to see detail log.</p>
+      <p><a href="assets/scripts/appArray.js" target="_blank">Code Example</a>
+      </p>
     </section>
 
   </body>
