--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
     <ul>
       <li><a href="basicCalculator/index.html" target="_blank">Calculator
           Basic</a></li>
+      <li><a href="basicCalculator/indexArray.html" target="_blank">Calculator
+          Basic (with intro to array & object)</a></li>
+    </ul>
+
+    <h3>Control Flow</h3>
+    <strong>Examples</strong>
+    <ul>
+      <li><a href="basicCalculator/indexifelse.html" target="_blank">Calculator
+          Basic (with intro to if else)</a></li>
     </ul>
 
     <h2>Advanced Features</h2>
