Add && and || statement to test input field data

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <strong>Examples</strong>
     <ul>
       <li><a href="basicCalculator/indexifelse.html" target="_blank">Calculator
-          Basic (with intro to if else)</a></li>
+          Basic (with intro to if, else if, &&, ||)</a></li>
     </ul>
 
     <h2>Advanced Features</h2>
