Removed untracked files and directories from repo

--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
           Basic (with intro to if, else if, &&, ||)</a></li>
     </ul>
 
+    <strong>Exercies</strong>
+    <ul>
+      <li><a href="gameHealth/index.html" target="_blank">Game Health
+          Exercises</a></li>
+    </ul>
+
     <h2>Advanced Features</h2>
     <h3>Scope</h3>
     <strong>Exercises:</strong>
