Add more code example to repo

--- a/gameHealth/index.html
+++ b/gameHealth/index.html
@@ -23,6 +23,11 @@
       <button id="strong-attack-btn">STRONG ATTACK</button>
       <button id="heal-btn">HEAL</button>
       <button id="log-btn">SHOW LOG</button>
+      <p>Open chrome console to see log output!</p>
+      <a href="assets/scripts/app.js" target="_blank">app.js Code
+        Example</a>
+      <a href="assets/scripts/vendor.js" target="_blank">vendor.js Code
+        Example</a>
     </section>
   </body>
 
