--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
     </ul>
     <h3>Exercises: Number, String, Boolean, Comparisons</h3>
     <ul>
-      <li><a href="calculator.js" target="_blank">Calculator 1</a></li>
-      <li><a href="keylessCar.js" target="_blank">Make a keyless car</a></li>
+      <li><a href="pages/calculator.html" target="_blank">Calculator 1</a></li>
+      <li><a href="pages/keylessCar.html" target="_blank">Make a keyless
+          car</a></li>
     </ul>
     <h3>Exercises</h3>
     <ul>
@@ -57,12 +58,20 @@
     <ul>
       <li><a href="basicCalculator/indexifelse.html" target="_blank">Calculator
           Basic (with intro to if, else if, &&, ||)</a></li>
+      <li><a href="gameHealth/index.html" target="_blank">Game Health with if
+          else if statement</a></li>
+      <li><a href="gameHealth/indexTernaryExam01.html" target="_blank">Game
+          Health with Ternary operator</a></li>
+      <li><a href="gameHealth/switchCaseExam01.html" target="_blank">Game
+          Health with Switch Case Statement</a></li>
+      <li><a href="gameHealth/gameHealthForLoop.html" target="_blank">Game
+          Health with for, for of, for in a while loops</a></li>
     </ul>
 
     <strong>Exercies</strong>
     <ul>
-      <li><a href="gameHealth/index.html" target="_blank">Game Health
-          Exercises</a></li>
+      <li><a href="pages/controlStructureExer01.html" target="_blank">for, for
+          of, for in a while loops</a></li>
     </ul>
 
     <h2>Advanced Features</h2>
