--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -4,24 +4,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>JavaScrip Practice</title>
+        <title>JavaScript Practice</title>
     </head>
 
     <body>
-        <h1>Advanced JavaScript</h1>
+        <h1>Fundamental JavaScript</h1>
 
-        <h2>Variable with let & const examples</h2>
+        <h2>Variable, Number, String & Boolean Comparisons</h2>
 
         <p>Please open the chrome browser console to see the script output data
         </p>
 
         <ul>
-            <li><a href="../scripts/letConstExam01.js" target="_blank">Variale
-                    with let & const Code Example</a></li>
+            <li><a href="../scripts/calculator.js" target="_blank">Calculator
+                    Code Example</a></li>
         </ul>
 
 
-        <script src="../scripts/letConstExam01.js"></script>
+        <script src="../scripts/calculator.js"></script>
         <!-- <script src="scripts/es10Exer01.js"></script> -->
         <!-- <script src="scripts/es5es6_001.js"></script> -->
     </body>
