--- a/pages/closures01.html
+++ b/pages/closures01.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScrip ES5/ES6 Practices</title>
+    <title>JavaScript ES5/ES6 Practices</title>
   </head>
 
   <body>
