Adding more code example & exercises to repo

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <ul>
       <li><a href="pages/functionScopeExam01.html" target="_blank">Functions &
           scope Examples</a></li>
+      <li><a href="functionsExer01/index.html" target="_blank">Arrow Functions
+          Practice Examples</a></li>
     </ul>
     <strong>Exercies</strong>
     <ul>
