Add for java code examples to repo

--- a/index.html
+++ b/index.html
@@ -135,12 +135,48 @@
       </li>
     </ul>
 
-
-    <h3>Advanced Objects & Functions</h3>
-    <strong>Example Code</strong>
+    <h3>Arrow Functions</h3>
+    <strong>Arrow function example code</strong>
     <ul>
+      <li><a href="pages/arrowFunction01.html" target="_blank">Arrow
+          function</a></li>
       <li><a href="pages/functionConstructor01.html" target="_blank">Function
           Constructor Example 01</a></li>
+      <li><a href="pages/functionConstructorEx01.html" target="_blank">Function
+          constructor Example 02</a></li>
+    </ul>
+
+    <h3>Lexical 'this' keyword</h3>
+    <strong>this keyword</strong>
+    <ul>
+      <li><a href="pages/thisKeyword01.html" target="_blank">this keyword
+          example</a></li>
+    </ul>
+
+    <h3>Destructuring</h3>
+    <ul>
+      <li><a href="pages/destructuring01.html" target="_blank">Destructuring
+          Example</a></li>
+    </ul>
+
+    <h3>Array Iteration in ES6</h3>
+    <strong>Example Code</strong>
+    <ul>
+      <li><a href="pages/arrayInEs6.html" target="_blank">Array Example 01</a>
+      </li>
+    </ul>
+
+    <h3>Spread Operator</h3>
+    <strong>Example</strong>
+    <ul>
+      <li><a href="pages/spreadOperator.html" target="_blank">Spread Operator
+          Example</a></li>
+    </ul>
+
+    <h3>Objects & Functions</h3>
+    <strong>Example Code</strong>
+    <ul>
+
       <li><a href="pages/objectCreate01.html" target="_blank">Object.create()
           Example 01</a></li>
       <li><a href="pages/primitiveObjects01.html" target="_blank">Primities &
