Add code example to repo

--- a/index.html
+++ b/index.html
@@ -173,6 +173,37 @@
           Example</a></li>
     </ul>
 
+    <h3>Rest Parameters</h3>
+    <strong>Example</strong>
+    <ul>
+      <li><a href="pages/restParameters.html" target="_blank">Rest parameter
+          Example</a></li>
+    </ul>
+
+    <h3>Maps</h3>
+    <strong>Example</strong>
+    <ul>
+      <li><a href=""></a>Map Example</li>
+    </ul>
+
+    <h3>Classes and Subclasses</h3>
+    <strong>Code Examples</strong>
+    <ul>
+      <li><a href="pages/classExam01.html" target="_blank">Class Examples</a>
+      </li>
+      <li><a href="pages/classExam02.html" target="_blank">Class & Subclass
+          Examples</a>
+      </li>
+    </ul>
+
+    <h3>ES6 Coding Exercices</h3>
+    <strong>Code Test Page</strong>
+    <ul>
+      <li><a href="pages/es6codingChallenge.html" target="_blank">ES6 coding
+          challenge</a></li>
+    </ul>
+
+
     <h3>Objects & Functions</h3>
     <strong>Example Code</strong>
     <ul>
