--- a/pages/es6codingChallenge.html
+++ b/pages/es6codingChallenge.html
@@ -3,12 +3,12 @@
 
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>JavaScript Practice</title>
+        <title>Section 7: Get Ready for the Future: ES6 / ES2015</title>
+
         <style>
             .box {
                 width: 200px;
-                padding: 20px;
+                padding: 40px;
                 text-align: center;
                 font-size: 20px;
                 margin-top: 30px;
@@ -27,29 +27,21 @@
             }
 
         </style>
+
     </head>
 
     <body>
-        <h1>Spread Operator</h1>
-
-        <h1>Get Ready for the Future: ES6</h1>
+        <h1>Section 7: Get Ready for the Future: ES6 / ES2015</h1>
 
         <div class="box green">I'm green!</div>
         <div class="box blue">I'm blue!</div>
         <div class="box orange">I'm orange!</div>
 
-        <p>Please open the chrome browser console to see the script output data
-        </p>
+        <p><a href="../scripts/es6codingChalange.js" target="_blank">Code
+                Example</a></p>
 
-        <ul>
-            <li><a href="../scripts/spreadOperator.js" target="_blank">Spread
-                    operator example</a></li>
-        </ul>
-
-
-        <script src="../scripts/spreadOperator.js"></script>
-        <!-- <script src="scripts/es10Exer01.js"></script> -->
-        <!-- <script src="scripts/es5es6_001.js"></script> -->
+        <!-- <script src="../scripts/thisKeyword01.js"></script> -->
+        <script src="../scripts/es6codingChalange.js"></script>
     </body>
 
 </html>
