--- a/pages/restParameters.html
+++ b/pages/restParameters.html
@@ -30,7 +30,7 @@
     </head>
 
     <body>
-        <h1>Spread Operator</h1>
+        <h1>Rest parameters</h1>
 
         <h1>Get Ready for the Future: ES6</h1>
 
@@ -42,12 +42,12 @@
         </p>
 
         <ul>
-            <li><a href="../scripts/spreadOperator.js" target="_blank">Spread
-                    operator example</a></li>
+            <li><a href="../scripts/restParameters.js" target="_blank">Rest
+                    parameters</a></li>
         </ul>
 
 
-        <script src="../scripts/spreadOperator.js"></script>
+        <script src="../scripts/restParameters.js"></script>
         <!-- <script src="scripts/es10Exer01.js"></script> -->
         <!-- <script src="scripts/es5es6_001.js"></script> -->
     </body>
