--- a/index.html
+++ b/index.html
@@ -309,6 +309,18 @@
       </li>
     </ul>
 
+    <h2>Asynchronous JavaScript: Promises, Async/Await and AJAX</h2>
+    <h3>Asynchronous JavaScript</h3>
+    <strong>Code Examples</strong>
+    <ul>
+      <li><a href="pages/asyncJSExam01.html" target="_blank">Asynchronous Code
+          Example</a></li>
+      <li><a href="pages/promisesExam01.html" target="_blank">Promises Code
+          Example</a></li>
+    </ul>
+
+
+
     <h3>React.js + Redux</h3>
     <strong>Code Example</strong>
 
