Add code example to repo

--- a/index.html
+++ b/index.html
@@ -317,6 +317,8 @@
           Example</a></li>
       <li><a href="pages/promisesExam01.html" target="_blank">Promises Code
           Example</a></li>
+      <li><a href="pages/asyncwaitExamp01.html" target="_blank">Promises to
+          Async/Await Code Example</a></li>
     </ul>
 
 
