--- a/pages/asyncwaitExamp01.html
+++ b/pages/asyncwaitExamp01.html
@@ -11,15 +11,15 @@
 
         <h1>Asynchronus JavaScript</h1>
 
-        <h2>From Callback Hell to Promises</h2>
+        <h2>From Promises to Async/Await</h2>
 
         <p>Open chrome console to see code output</p>
 
-        <a href="../scripts/promisesExam01.js" target="_blank" </a>Code
+        <a href="../scripts/asyncAwaitExamp01.js" target="_blank" </a>Code
             Example</a>
 
 
-        <script src="../scripts/promisesExam01.js"></script>
+        <script src="../scripts/asyncAwaitExamp01.js"></script>
     </body>
 
 </html>
