Add ajax call with fetch code example to the repo

--- a/index.html
+++ b/index.html
@@ -321,6 +321,13 @@
           Async/Await Code Example</a></li>
     </ul>
 
+    <h2>AJAX and APIs</h2>
+    <h3>Metaweather.com API</h3>
+    <strong>Code Example</strong>
+    <ul>
+      <li><a href="pages/ajaxapiExamp01.html" target="_blank">Weather API
+          Example</a></li>
+    </ul>
 
 
     <h3>React.js + Redux</h3>
